Berhasil membuat fungsi Input dan menampilkan data ke detail page

--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -14,5 +14,7 @@
 
 
 <ion-content padding>
-
+  <p>Nama : {{data.nama}}</p>
+  <p>Pendapat : {{data.pendapat}}</p>
+    <button ion-button full (click)="kembali()"> Back to Home </button>
 </ion-content>
