--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,13 +12,12 @@
       <ion-avatar item-start>
         <img src="{{item.avatar}}">
       </ion-avatar>
-      <h2>{{item.first_name}} {{item.last_name}}</h2>
+      <h2>{{item.fullName}} </h2>
     </ion-item>
     <ion-card-content>
-      <p>Birtdate : {{item.birthdate}}</p>
-      <p>Email : {{item.email}}</p>
-      <p>Gender : {{item.gender}}</p>
-      <p>IP Address : {{item.ip_address}}</p>
+      <p> <ion-icon name="pin" isActive="false"></ion-icon> University : {{item.university}}</p>
+      <p> <ion-icon color="bright" name="key" role="img" class="icon icon-ios icon-ios-bright ion-ios-key" aria-label="key"></ion-icon> Credit Card Type : {{item.creditCardType}}</p>
+      <p> <ion-icon name="calculator" role="img" class="icon icon-ios ion-ios-calculator" aria-label="calculator"></ion-icon> No. Credit Card : {{item.creditCard}}</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
